--- a/evlib/Home.html
+++ b/evlib/Home.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Base Operation Mode - FTC Programming with ElectronVolts</title>
+        <title>Evlib - FTC Programming with ElectronVolts</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="../starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="../starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../opmodes/base.html" class="active"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="../metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="../evlib/Home.html"><strong aria-hidden="true">8.</strong> Evlib</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Dependencies</div></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="../starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="../starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="../metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="../evlib/Home.html" class="active"><strong aria-hidden="true">8.</strong> Evlib</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Dependencies</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -134,43 +134,61 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="base-operation-mode"><a class="header" href="#base-operation-mode">Base Operation Mode</a></h1>
-<p>The class <code>evlib.opmodes.AbstractOp</code> represents the most basic OpMode used by ElectronVolts. It moves through seven runtime stages and three utility stages.</p>
-<p>Here are the seven runtime stages, in order:</p>
+                        <p>Welcome to the EVLib wiki!</p>
+<p>EVLib is designed to assist in the development of very powerful FTC autonomous programs. It provides helper mechanisms for a variety of hardware, like servo speed control.</p>
+<p>For starters, check [[this page|Importing Into Your Project]] for instructions on importing into your project.</p>
+<h2 id="features"><a class="header" href="#features">Features</a></h2>
+<p>EVLib includes the <a href="https://github.com/FTC7393/state-machine-framework/wiki">state-machine-framework</a>, so all the features of the state-machine-framework can be used from EVLib.</p>
 <ul>
-<li>
-<p><code>setup</code>: This method is run once when the init button is pressed.</p>
-</li>
-<li>
-<p><code>setup_act</code>: After <code>setup</code> has run, this method is run in a loop, which exits when the play button is pressed. This method is guaranteed to not stop before it completes.</p>
-</li>
-<li>
-<p><code>go</code>: This method is run once at the time when the play button is pressed.</p>
-</li>
-<li>
-<p><code>pre_act</code>: This method is always run before every time <code>act</code> runs.</p>
-</li>
-<li>
-<p><code>act</code>: After <code>go</code> has run, this method is run in a loop until the OpMode is stopped by the Driver Station or by the game time.</p>
-</li>
-<li>
-<p><code>post_act</code>: This method is always run after every time <code>act</code> runs.</p>
-</li>
-<li>
-<p><code>end</code>: This method is run once after the OpMode is stopped by the Driver Station or by the game timer.</p>
-</li>
+<li>[[robot configuration|Robot Configuration]]</li>
+<li>[[the Motor interfaces|Motor and MotorEnc]]</li>
+<li>[[creating motors and continuous servos|Creating Motors]]</li>
+<li>[[grouping motors|NMotors]]</li>
+<li>[[driving mecanum wheels|Mecanum Wheels]]</li>
+<li>[[control of mecanum wheels|Mecanum Control]]</li>
+<li>[[servo configuration|Servo Config]]</li>
+<li>[[servo speed control|Servo Speed Control]]</li>
+<li>[[servo presets|Servo Presets]]</li>
+<li>[[abstract opmodes|AbstractOp]]</li>
+<li>[[abstract teleop|AbstractTeleOp]]</li>
+<li>[[abstract autonomous|AbstractAutoOp]]</li>
+<li>[[tuning the servo presets|AbstractServoTuneOp]]</li>
+<li>[[selecting options for autonomous|AbstractOptionsOp]]</li>
+<li>[[gamepad button edge detection and joystick scaling|GamepadManager]]</li>
+<li>[[EVStates factory class|EVStates]]</li>
+<li>[[EVEndConditions factory class|EVEndConditions]]</li>
+<li>[[EVStateMachineBuilder|EVStateMachineBuilder]]</li>
+<li>[[analog sensors|Analog Sensors]]</li>
+<li>[[digital sensors|Digital Sensors]]</li>
+<li>[[frame grabbing with OpenCV|OpenCV Frame Grabbing]]</li>
+<li>[[image processing with OpenCV|OpenCV Image Processing]]</li>
+<li>[[line sensor|CalibratedLineSensor]]</li>
+<li>[[double line sensor|DoubleLineSensor]]</li>
+<li>[[color sensor|ColorSensor]]</li>
+<li>[[line finder|LineFinder]]</li>
+<li>[[averaging analog sensors|AveragedSensor]]</li>
+<li>[[global telemetry|Telem]]</li>
+<li>[[step timer for logging|StepTimer]]</li>
+<li>[[file utilities|FileUtil]]</li>
+<li>[[LineSensorArray]] that uses the i2c <a href="https://www.sparkfun.com/products/13582">SparkFun Line Follower Array</a></li>
+<li>[[frame grabbing with Vuforia|Vuforia Frame Grabbing]]</li>
+<li>[[image processing with Vuforia|Vuforia and OpenCV Beacon Color Detection]]</li>
+<li>[[Joystick Recorder]] for &quot;playback&quot; in autonomous</li>
 </ul>
-<p>You usually don't need to deal with all of these directly, since those such as <code>pre_act</code> and <code>post_act</code> are meant for the the creation of custom OpModes. Others, such as <code>setup</code> and <code>act</code>, are usually for you to use.</p>
+<h2 id="planned-features"><a class="header" href="#planned-features">Planned Features</a></h2>
+<ul>
+<li>[[TaskWeb]] to manage executing and moving between multiple tasks on the field</li>
+<li>[[Particle Detection]] for autonomous recollection</li>
+<li>[[Position Tracker]] to read encoders for position info and return to a set location after driving</li>
+</ul>
+<p>This project depends on our <a href="https://github.com/FTC7393/state-machine-framework/">state-machine-framework</a> library. Click <a href="https://github.com/FTC7393/state-machine-framework/wiki">here</a> for the state-machine-framework wiki.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../opmodes/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../metaprogramming/options.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
-                            </a>
-                            <a rel="next" href="../metaprogramming/options.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
                     </nav>
@@ -178,11 +196,8 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../opmodes/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../metaprogramming/options.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
-                    </a>
-                    <a rel="next" href="../metaprogramming/options.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
 
