--- a/print.html
+++ b/print.html
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">8.</strong> Dependencies</div></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="evlib/Home.html"><strong aria-hidden="true">8.</strong> Evlib</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Dependencies</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -687,6 +687,54 @@ public enum AllianceColor {
 <pre><code class="language-java">AllianceColor color = (AllianceColor) file.load(ExampleOptions.ALLIANCE_COLOR);
 </code></pre>
 <p>The cast is necessary, without it you will have a compile error.</p>
+<div style="break-before: page; page-break-before: always;"></div><p>Welcome to the EVLib wiki!</p>
+<p>EVLib is designed to assist in the development of very powerful FTC autonomous programs. It provides helper mechanisms for a variety of hardware, like servo speed control.</p>
+<p>For starters, check [[this page|Importing Into Your Project]] for instructions on importing into your project.</p>
+<h2 id="features"><a class="header" href="#features">Features</a></h2>
+<p>EVLib includes the <a href="https://github.com/FTC7393/state-machine-framework/wiki">state-machine-framework</a>, so all the features of the state-machine-framework can be used from EVLib.</p>
+<ul>
+<li>[[robot configuration|Robot Configuration]]</li>
+<li>[[the Motor interfaces|Motor and MotorEnc]]</li>
+<li>[[creating motors and continuous servos|Creating Motors]]</li>
+<li>[[grouping motors|NMotors]]</li>
+<li>[[driving mecanum wheels|Mecanum Wheels]]</li>
+<li>[[control of mecanum wheels|Mecanum Control]]</li>
+<li>[[servo configuration|Servo Config]]</li>
+<li>[[servo speed control|Servo Speed Control]]</li>
+<li>[[servo presets|Servo Presets]]</li>
+<li>[[abstract opmodes|AbstractOp]]</li>
+<li>[[abstract teleop|AbstractTeleOp]]</li>
+<li>[[abstract autonomous|AbstractAutoOp]]</li>
+<li>[[tuning the servo presets|AbstractServoTuneOp]]</li>
+<li>[[selecting options for autonomous|AbstractOptionsOp]]</li>
+<li>[[gamepad button edge detection and joystick scaling|GamepadManager]]</li>
+<li>[[EVStates factory class|EVStates]]</li>
+<li>[[EVEndConditions factory class|EVEndConditions]]</li>
+<li>[[EVStateMachineBuilder|EVStateMachineBuilder]]</li>
+<li>[[analog sensors|Analog Sensors]]</li>
+<li>[[digital sensors|Digital Sensors]]</li>
+<li>[[frame grabbing with OpenCV|OpenCV Frame Grabbing]]</li>
+<li>[[image processing with OpenCV|OpenCV Image Processing]]</li>
+<li>[[line sensor|CalibratedLineSensor]]</li>
+<li>[[double line sensor|DoubleLineSensor]]</li>
+<li>[[color sensor|ColorSensor]]</li>
+<li>[[line finder|LineFinder]]</li>
+<li>[[averaging analog sensors|AveragedSensor]]</li>
+<li>[[global telemetry|Telem]]</li>
+<li>[[step timer for logging|StepTimer]]</li>
+<li>[[file utilities|FileUtil]]</li>
+<li>[[LineSensorArray]] that uses the i2c <a href="https://www.sparkfun.com/products/13582">SparkFun Line Follower Array</a></li>
+<li>[[frame grabbing with Vuforia|Vuforia Frame Grabbing]]</li>
+<li>[[image processing with Vuforia|Vuforia and OpenCV Beacon Color Detection]]</li>
+<li>[[Joystick Recorder]] for &quot;playback&quot; in autonomous</li>
+</ul>
+<h2 id="planned-features"><a class="header" href="#planned-features">Planned Features</a></h2>
+<ul>
+<li>[[TaskWeb]] to manage executing and moving between multiple tasks on the field</li>
+<li>[[Particle Detection]] for autonomous recollection</li>
+<li>[[Position Tracker]] to read encoders for position info and return to a set location after driving</li>
+</ul>
+<p>This project depends on our <a href="https://github.com/FTC7393/state-machine-framework/">state-machine-framework</a> library. Click <a href="https://github.com/FTC7393/state-machine-framework/wiki">here</a> for the state-machine-framework wiki.</p>
 
                     </main>
 
